Declare MessageConverters as Beans & Async DocumentIndexing